# CI-training

./: main.py  pyproject.toml
.github/workflows/: first-action.yml
tests/: test_app.py
