[tool.poetry]
name = "docker"
version = "0.1.0"
description = "docker setup test"
authors = ["fizzy <m.schmidt199090@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
